ansible/roles/kubernetes/files/kubernetes-dashboard-ingress.yml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# TODO: Make kubernetes dashboard accessible by Ingress (not working yet)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure # Traefik HTTPS entrypoint
  routes:
    - kind: Rule
      match: Host(`kubernetes.localhost`)
      priority: 10
      services:
        - name: kubernetes-dashboard-web
          port: 443 # HTTPS internal traffic
  tls:
    certResolver: default # Traefik will handle TLS automatically
---
